[gd_scene load_steps=27 format=2]

[ext_resource path="res://UI/GameUI/BoppieInformation.gd" type="Script" id=1]
[ext_resource path="res://UI/GameUI/BoppieCountHistoryPlot.gd" type="Script" id=2]
[ext_resource path="res://UI/GameUI/BoppieCount.gd" type="Script" id=3]
[ext_resource path="res://UI/GameUI/FPS.gd" type="Script" id=4]
[ext_resource path="res://UI/GameUI/GameTime.gd" type="Script" id=5]
[ext_resource path="res://UI/GameUI/IconGameSpeed.gd" type="Script" id=6]
[ext_resource path="res://UI/GameUI/Neurons.gd" type="Script" id=7]
[ext_resource path="res://UI/GameUI/TimeScale.gd" type="Script" id=8]
[ext_resource path="res://UI/GameUI/CheckFollowFittest.gd" type="Script" id=9]
[ext_resource path="res://UI/GameUI/Difficulty.gd" type="Script" id=10]
[ext_resource path="res://UI/GameUI/FittestBoppieList.gd" type="Script" id=11]
[ext_resource path="res://UI/GameUI/HelpButton.gd" type="Script" id=12]
[ext_resource path="res://UI/GameUI/Seed.gd" type="Script" id=13]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Resources/Fonts/FontAwesome/otfs/Font Awesome 5 Free-Solid-900.otf"

[sub_resource type="DynamicFont" id=2]
size = 80
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Resources/Fonts/FontAwesome/otfs/Font Awesome 5 Free-Solid-900.otf"

[sub_resource type="DynamicFont" id=4]
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Resources/Fonts/FredokaOne-Regular.ttf"

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = SubResource( 5 )

[sub_resource type="DynamicFontData" id=10]
font_path = "res://Resources/Fonts/FontAwesome/otfs/Font Awesome 5 Free-Solid-900.otf"

[sub_resource type="DynamicFont" id=11]
font_data = SubResource( 10 )

[sub_resource type="DynamicFontData" id=12]
font_path = "res://Resources/Fonts/FredokaOne-Regular.ttf"

[sub_resource type="DynamicFont" id=13]
font_data = SubResource( 12 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 1, 1, 1, 0.0980392 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://Resources/Fonts/FredokaOne-Regular.ttf"

[sub_resource type="DynamicFont" id=8]
font_data = SubResource( 7 )

[node name="UI" type="CanvasLayer"]
pause_mode = 2

[node name="StatusBar" type="MarginContainer" parent="."]
pause_mode = 1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -223.0
grow_vertical = 0
mouse_filter = 2
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="StatusBar"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1915.0
margin_bottom = 218.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="StatusBar/VBoxContainer"]
margin_right = 1910.0
margin_bottom = 80.0
mouse_filter = 2
alignment = 1

[node name="IconGameSpeed" type="Label" parent="StatusBar/VBoxContainer/HBoxContainer"]
pause_mode = 2
modulate = Color( 1, 1, 1, 0 )
margin_left = 920.0
margin_right = 990.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 2 )
text = ""
valign = 2
script = ExtResource( 6 )

[node name="Tween" type="Tween" parent="StatusBar/VBoxContainer/HBoxContainer/IconGameSpeed"]

[node name="VSeparator" type="VSeparator" parent="StatusBar/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 84.0
margin_right = 1910.0
margin_bottom = 184.0
rect_min_size = Vector2( 0, 100 )
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="StatusBar/VBoxContainer"]
margin_top = 188.0
margin_right = 1910.0
margin_bottom = 213.0
mouse_filter = 2
custom_constants/margin_right = 10
custom_constants/margin_top = 0
custom_constants/margin_left = 10

[node name="HBoxContainer" type="HBoxContainer" parent="StatusBar/VBoxContainer/MarginContainer"]
margin_left = 10.0
margin_right = 1900.0
margin_bottom = 25.0
mouse_filter = 2
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="HBoxContainer" parent="StatusBar/VBoxContainer/MarginContainer/HBoxContainer"]
margin_right = 135.0
margin_bottom = 25.0

[node name="IconTime" type="Label" parent="StatusBar/VBoxContainer/MarginContainer/HBoxContainer/Time"]
margin_top = 4.0
margin_right = 16.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 4 )
text = ""
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameTime" type="Label" parent="StatusBar/VBoxContainer/MarginContainer/HBoxContainer/Time"]
margin_left = 20.0
margin_right = 135.0
margin_bottom = 25.0
rect_min_size = Vector2( 115, 0 )
custom_fonts/font = SubResource( 6 )
text = "hh:mm:ss"
valign = 2
script = ExtResource( 5 )

[node name="SecondTimer" type="Timer" parent="StatusBar/VBoxContainer/MarginContainer/HBoxContainer/Time/GameTime"]
autostart = true

[node name="TimeScale" type="Label" parent="StatusBar/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 185.0
margin_right = 204.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 6 )
text = "1x"
valign = 2
script = ExtResource( 8 )

[node name="FPS" type="Label" parent="StatusBar/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 254.0
margin_right = 292.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 6 )
text = "FPS"
valign = 2
script = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="StatusBar/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 342.0
margin_right = 501.0
margin_bottom = 25.0

[node name="FollowFittest" type="Label" parent="StatusBar/VBoxContainer/MarginContainer/HBoxContainer/HBoxContainer"]
margin_right = 139.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 6 )
text = "Follow fittest:"
valign = 2

[node name="CheckFollowFittest" type="Label" parent="StatusBar/VBoxContainer/MarginContainer/HBoxContainer/HBoxContainer"]
margin_left = 143.0
margin_top = 4.0
margin_right = 159.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 4 )
text = ""
valign = 2
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Difficulty" type="Label" parent="StatusBar/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 551.0
margin_right = 664.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 6 )
text = "Difficulty: x"
valign = 2
script = ExtResource( 10 )

[node name="Seed" type="Label" parent="StatusBar/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 714.0
margin_right = 781.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 6 )
text = "Seed: x"
valign = 2
script = ExtResource( 13 )

[node name="HBoxContainer2" type="HBoxContainer" parent="StatusBar/VBoxContainer/MarginContainer"]
margin_left = 10.0
margin_right = 1900.0
margin_bottom = 25.0
mouse_filter = 2
custom_constants/separation = 20
alignment = 2

[node name="BoppieCount" type="Label" parent="StatusBar/VBoxContainer/MarginContainer/HBoxContainer2"]
margin_left = 1772.0
margin_right = 1842.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 6 )
text = "#count"
align = 2
valign = 2
script = ExtResource( 3 )

[node name="HelpButton" type="Button" parent="StatusBar/VBoxContainer/MarginContainer/HBoxContainer2"]
margin_left = 1862.0
margin_right = 1890.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 11 )
toggle_mode = true
text = ""
script = ExtResource( 12 )

[node name="HelpPopup" type="PopupPanel" parent="StatusBar/VBoxContainer/MarginContainer/HBoxContainer2/HelpButton"]
visible = true
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="StatusBar/VBoxContainer/MarginContainer/HBoxContainer2/HelpButton/HelpPopup"]
margin_left = 4.0
margin_top = 4.0
margin_right = 624.0
margin_bottom = 624.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Keybindings" type="RichTextLabel" parent="StatusBar/VBoxContainer/MarginContainer/HBoxContainer2/HelpButton/HelpPopup/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 610.0
margin_bottom = 610.0
rect_min_size = Vector2( 600, 600 )
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 13 )
bbcode_enabled = true
bbcode_text = "[center]Keybindings[/center]

Key a"
text = "Keybindings

Key a"
selection_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightSidePanel" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_bottom = 1080.0
grow_horizontal = 0
rect_min_size = Vector2( 300, 0 )
mouse_filter = 2
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="RightSidePanel"]
margin_left = 10.0
margin_top = 10.0
margin_right = 310.0
margin_bottom = 1070.0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="RightSidePanel/VBoxContainer"]
margin_right = 300.0
margin_bottom = 25.0
mouse_filter = 2
alignment = 1

[node name="PlotTitle" type="Label" parent="RightSidePanel/VBoxContainer/HBoxContainer"]
margin_left = 45.0
margin_right = 255.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 6 )
text = "Owlie vs. Kloppie plot"
align = 1
valign = 2

[node name="BoppieCountHistoryPlot" type="TextureRect" parent="RightSidePanel/VBoxContainer"]
pause_mode = 1
margin_top = 29.0
margin_right = 300.0
margin_bottom = 179.0
rect_min_size = Vector2( 300, 150 )
mouse_filter = 2
expand = true
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="RightSidePanel/VBoxContainer/BoppieCountHistoryPlot"]
wait_time = 5.0
autostart = true

[node name="LeftSidePanel" type="MarginContainer" parent="."]
margin_right = 340.0
margin_bottom = 486.0
mouse_filter = 2
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="LeftSidePanel"]
margin_left = 10.0
margin_top = 10.0
margin_right = 438.0
margin_bottom = 476.0
mouse_filter = 2
custom_styles/panel = SubResource( 9 )

[node name="InsideMargin" type="MarginContainer" parent="LeftSidePanel/PanelContainer"]
margin_right = 428.0
margin_bottom = 466.0
mouse_filter = 2
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="BoppieInformation" type="VBoxContainer" parent="LeftSidePanel/PanelContainer/InsideMargin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 418.0
margin_bottom = 456.0
mouse_filter = 2
size_flags_vertical = 15
custom_constants/separation = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BoppieName" type="Label" parent="LeftSidePanel/PanelContainer/InsideMargin/BoppieInformation"]
margin_right = 408.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 6 )
text = "Name #123"
align = 1
valign = 2

[node name="HSeparator" type="HSeparator" parent="LeftSidePanel/PanelContainer/InsideMargin/BoppieInformation"]
margin_top = 25.0
margin_right = 408.0
margin_bottom = 35.0
custom_constants/separation = 10

[node name="Energy" type="Label" parent="LeftSidePanel/PanelContainer/InsideMargin/BoppieInformation"]
margin_top = 35.0
margin_right = 408.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 6 )
text = "Energy/Max"
valign = 2

[node name="OffspringEnergy" type="Label" parent="LeftSidePanel/PanelContainer/InsideMargin/BoppieInformation"]
margin_top = 60.0
margin_right = 408.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 6 )
text = "Offspring energy/max"
valign = 2

[node name="OffspringCount" type="Label" parent="LeftSidePanel/PanelContainer/InsideMargin/BoppieInformation"]
margin_top = 85.0
margin_right = 408.0
margin_bottom = 110.0
custom_fonts/font = SubResource( 6 )
text = "Offspring Count: X"
valign = 2

[node name="Level" type="Label" parent="LeftSidePanel/PanelContainer/InsideMargin/BoppieInformation"]
margin_top = 110.0
margin_right = 408.0
margin_bottom = 135.0
custom_fonts/font = SubResource( 6 )
text = "Level: x/max (size)"
valign = 2

[node name="Survived" type="Label" parent="LeftSidePanel/PanelContainer/InsideMargin/BoppieInformation"]
margin_top = 135.0
margin_right = 408.0
margin_bottom = 160.0
custom_fonts/font = SubResource( 6 )
text = "Survived: mm:hh"
valign = 2

[node name="Eaten" type="Label" parent="LeftSidePanel/PanelContainer/InsideMargin/BoppieInformation"]
margin_top = 160.0
margin_right = 408.0
margin_bottom = 185.0
custom_fonts/font = SubResource( 6 )
text = "Eaten: x"
valign = 2

[node name="HSeparator5" type="HSeparator" parent="LeftSidePanel/PanelContainer/InsideMargin/BoppieInformation"]
margin_top = 185.0
margin_right = 408.0
margin_bottom = 195.0
custom_constants/separation = 10

[node name="TabContainer" type="TabContainer" parent="LeftSidePanel/PanelContainer/InsideMargin/BoppieInformation"]
margin_top = 195.0
margin_right = 408.0
margin_bottom = 446.0
size_flags_vertical = 15

[node name="Neural network" type="VBoxContainer" parent="LeftSidePanel/PanelContainer/InsideMargin/BoppieInformation/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="NeuralNetworkName" type="Label" parent="LeftSidePanel/PanelContainer/InsideMargin/BoppieInformation/TabContainer/Neural network"]
margin_right = 400.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 6 )
text = "Neural Network"
align = 1
valign = 2

[node name="HSeparator3" type="HSeparator" parent="LeftSidePanel/PanelContainer/InsideMargin/BoppieInformation/TabContainer/Neural network"]
margin_top = 29.0
margin_right = 400.0
margin_bottom = 39.0
custom_constants/separation = 10

[node name="Neurons" type="PanelContainer" parent="LeftSidePanel/PanelContainer/InsideMargin/BoppieInformation/TabContainer/Neural network"]
margin_top = 43.0
margin_right = 400.0
margin_bottom = 193.0
rect_min_size = Vector2( 400, 150 )
mouse_filter = 2
script = ExtResource( 7 )

[node name="DNA" type="VBoxContainer" parent="LeftSidePanel/PanelContainer/InsideMargin/BoppieInformation/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -364.0
margin_bottom = -157.0
rect_min_size = Vector2( 0, 700 )

[node name="DNAName" type="Label" parent="LeftSidePanel/PanelContainer/InsideMargin/BoppieInformation/TabContainer/DNA"]
margin_right = 345.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 6 )
text = "DNA"
align = 1
valign = 2

[node name="HSeparator2" type="HSeparator" parent="LeftSidePanel/PanelContainer/InsideMargin/BoppieInformation/TabContainer/DNA"]
margin_top = 29.0
margin_right = 345.0
margin_bottom = 39.0
custom_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="LeftSidePanel/PanelContainer/InsideMargin/BoppieInformation/TabContainer/DNA"]
margin_top = 43.0
margin_right = 345.0
margin_bottom = 63.0
mouse_filter = 2
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShowDNA" type="Button" parent="LeftSidePanel/PanelContainer/InsideMargin/BoppieInformation/TabContainer/DNA/HBoxContainer"]
margin_right = 78.0
margin_bottom = 20.0
toggle_mode = true
pressed = true
action_mode = 0
text = "Show DNA"

[node name="ApplyDNA" type="Button" parent="LeftSidePanel/PanelContainer/InsideMargin/BoppieInformation/TabContainer/DNA/HBoxContainer"]
margin_left = 88.0
margin_right = 169.0
margin_bottom = 20.0
action_mode = 0
text = "Apply DNA"

[node name="CopyDNA" type="Button" parent="LeftSidePanel/PanelContainer/InsideMargin/BoppieInformation/TabContainer/DNA/HBoxContainer"]
margin_left = 179.0
margin_right = 255.0
margin_bottom = 20.0
text = "Copy DNA"

[node name="PasteDNA" type="Button" parent="LeftSidePanel/PanelContainer/InsideMargin/BoppieInformation/TabContainer/DNA/HBoxContainer"]
margin_left = 265.0
margin_right = 345.0
margin_bottom = 20.0
text = "Paste DNA"

[node name="DNA" type="TextEdit" parent="LeftSidePanel/PanelContainer/InsideMargin/BoppieInformation/TabContainer/DNA"]
margin_top = 67.0
margin_right = 345.0
margin_bottom = 417.0
rect_min_size = Vector2( 300, 350 )
focus_mode = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 6 )
text = "{ ... }"
highlight_current_line = true
syntax_highlighting = true
show_line_numbers = true
draw_tabs = true
draw_spaces = true
breakpoint_gutter = true
wrap_enabled = true
caret_blink = true

[node name="Fittest" type="ItemList" parent="LeftSidePanel/PanelContainer/InsideMargin/BoppieInformation/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
rect_min_size = Vector2( 0, 400 )
custom_fonts/font = SubResource( 8 )
allow_reselect = true
auto_height = true
script = ExtResource( 11 )

[node name="Tween" type="Tween" parent="LeftSidePanel/PanelContainer/InsideMargin/BoppieInformation"]

[connection signal="toggled" from="StatusBar/VBoxContainer/MarginContainer/HBoxContainer2/HelpButton" to="StatusBar/VBoxContainer/MarginContainer/HBoxContainer2/HelpButton" method="_on_HelpButton_toggled"]
[connection signal="toggled" from="LeftSidePanel/PanelContainer/InsideMargin/BoppieInformation/TabContainer/DNA/HBoxContainer/ShowDNA" to="LeftSidePanel/PanelContainer/InsideMargin/BoppieInformation" method="_on_Show_toggled"]
[connection signal="pressed" from="LeftSidePanel/PanelContainer/InsideMargin/BoppieInformation/TabContainer/DNA/HBoxContainer/ApplyDNA" to="LeftSidePanel/PanelContainer/InsideMargin/BoppieInformation" method="_on_ApplyDNA_pressed"]
[connection signal="pressed" from="LeftSidePanel/PanelContainer/InsideMargin/BoppieInformation/TabContainer/DNA/HBoxContainer/CopyDNA" to="LeftSidePanel/PanelContainer/InsideMargin/BoppieInformation" method="_on_CopyDNA_pressed"]
[connection signal="pressed" from="LeftSidePanel/PanelContainer/InsideMargin/BoppieInformation/TabContainer/DNA/HBoxContainer/PasteDNA" to="LeftSidePanel/PanelContainer/InsideMargin/BoppieInformation" method="_on_PasteDNA_pressed"]
[connection signal="gui_input" from="LeftSidePanel/PanelContainer/InsideMargin/BoppieInformation/TabContainer/DNA/DNA" to="LeftSidePanel/PanelContainer/InsideMargin/BoppieInformation" method="_on_DNA_gui_input"]
